# prog2-nhf

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
data/: bme.roads.geojsonl  filter.js  test.js
include/: algorithm.h  cli.h  config.h  consts.h  diagnostics.h  drawing.h  geo.h  gfx.h  lib.h  map.h  network.h  util.h  weights.h
src/: geo.cpp  gfx.cpp  io.cpp  lib.cpp  main.cpp  map.cpp  network.cpp  test.cpp  weights.cpp
